[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "yt-lib"
version = "0.2.1"
description = "Library files for Youtube transcripts and search."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "youtube-transcript-api>=1.2.4",
  "yt-dlp>=2026.2.4",
  "openai-whisper",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yt_lib"]

[dependency-groups]
dev = [
  "build>=1.4.0",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "ruff>=0.15.1",
]
