[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "yt-lib"
version = "0.3.11"
description = "Library files for Utilities and Youtube: transcripts, search, and information."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "youtube-transcript-api>=1.2.4",
  "yt-dlp>=2026.2.4",
  "openai-whisper",
  "pydantic>=2.12.5",
  "google-api-python-client>=2.190.0",
  "pdoc>=16.0.0",
  "python-dotenv>=1.2.2",
  "babel>=2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yt_lib"]

# [tool.hatch.build.targets.wheel.force-include]
# "src/yt_lib/py.typed" = "yt_lib/py.typed"

[dependency-groups]
dev = [
  "build>=1.4.0",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "ruff>=0.15.1",
]
